# FMC_contact

./: README.md  pyproject.toml
examples/dynamics/: main.py
examples/dynamics/input/: block.msh  star.msh
examples/dynamics/output/vtk/: body1.vtu  body2.vtu  body2_sampling_box.vtu  mesh1.vtu  mesh2.vtu
examples/static/: main.py
examples/static/input/: square.msh  square_points.txt
examples/static/output/vtk/: mesh.vtu  result.vtu  result_rigid_body.vtu  result_sampling_box.vtu
src/cmsl/fmc_contact/: __init__.py  contact_utils.py  custom_utils.py  differentiation_solver.py  dynamic_solver.py  estimator.py  fmc1.py  fmc2.py  geometry_utils.py  jax_utils.py  safe_utils.py  sdf.py  static_solver.py
